--- a/hello-world.batch.yaml
+++ b/hello-world.batch.yaml
@@ -1,9 +1,9 @@
-name: hello-world
+name: testingFilter
 description: Add Hello World to READMEs
 
 # Find all repositories that contain a README.md file.
 on:
-  - repositoriesMatchingQuery: file:README.md repo:morgangauth/testing
+  - repositoriesMatchingQuery: repo:morgangauth/*
 
 # In each repository, run this command. Each repository's resulting diff is captured.
 steps:
@@ -15,7 +15,5 @@ changesetTemplate:
   title: Hello World
   body: My first batch change!
   branch: hello-world # Push the commit to this branch.
-  labels: 
-  - batch-hello-world # Apply this label to each pull request.
   commit:
     message: Append Hello World to all README.md files
